Wed Dec 20 16:54:41 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix warning in QuartzTable

Wed Dec 20 15:13:05 GMT 2000 Olly Betts

	* OmTermListIterator merged into OmTermIterator.

	* Added OmRSet::contains() - checks if an RSet contains a given
	  docid.

	* Methods returning `const om_termname' now just return
	  `om_termname'.

Tue Dec 19 16:55:02 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented AllTermsIterator for DA and Multi databases.
	  Added a test which actually uses a multidatabase, but
	  disabled it as it currently fails for both Quartz and DA.

Tue Dec 19 12:14:05 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Adjusted TODO

Tue Dec 19 20:06:43 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Escaping for termnames in remote database communication modified
	  to use only characters in range 33 to 126.  Should now work on all
	  architectures.

	* Increased OM_SOCKET_PROTOCOL_VERSION to 8.

Mon Dec 18 17:23:48 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added "match_cutoff" option to get_mset OmSettings.

	* Added test for "match_cutoff" to apitest.

	* Updated todo.xml

Mon Dec 18 17:19:40 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented opening positionlists from inmemory databases.  Added
	  a testcase as well, which is run for quartz and inmemory.

Mon Dec 18 15:48:16 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented AllTermsIterator for quartz.  Interaction with
	  QuartzPostList needs to be cleaned up.

	* Added new functions [un]pack_string_preserving_sort(), which
	  pack a string in a way which preserves sort order.  Added a
	  testcase to quartztest.

	* Now use [un]pack_string_preserving_order() on postlist keys, so
	  that we can get at terms in sorted order.  (And get_tname_from_key()
	  added to separate out the term-unpacking as well as the packing)
	